--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.AppDefault" parent="Theme.Material3.DayNight">
-        <item name="android:windowLightStatusBar">false</item>
-        <!-- Customize your theme here. -->
-    </style>
+<!--    <style name="Theme.AppDefault" parent="Theme.Material3.DayNight">-->
+<!--        <item name="android:windowLightStatusBar">false</item>-->
+<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+<!--    </style>-->
 </resources>
